manifests/apps/cloudflared/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-to-ingress-nginx-external
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared-app
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: ingress-nginx-external-app
  ingress: []
